--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: Swift package
+          name: libcurl.a.zip
           path: |
             build/release/pkg/libcurl.a.xcframework.zip
             build/release/pkg/libcurl.a.xcframework.zip.sha256.txt
